@@ -133,7 +133,7 @@ Ns_ModuleInit(char *s, char *module)
 	return NS_ERROR;
     }
     Ns_Log(Notice, "nscp: listening on %s:%d", addr, port);
-    Ns_RegisterProcInfo(AcceptProc, "nscp", ArgProc);
+    Ns_RegisterProcInfo((void *)AcceptProc, "nscp", ArgProc);
     Ns_SockCallback(lsock, AcceptProc, NULL, NS_SOCK_READ|NS_SOCK_EXIT);
 
     /*
@@ -373,7 +373,7 @@ done:
 static int
 GetLine(SOCKET sock, char *prompt, Tcl_DString *dsPtr, int echo)
 {
-    unsigned char buf[2048];
+    char buf[2048];
     int n;
     int result = 0;
 
